0028971: Configuration - fix compatibility with glibc 2.26+ due to xlocale.h removal